# tally_iv

./: .gitignore
claims_status/: CARC_codes.csv  payers_insert.sql  requirements.txt  test.py
claims_status/app/: main.py
claims_status/app/api/routes/: claims_api.py
claims_status/app/config/: __init__.py  edl_config.py  log_config.py  settings.py
claims_status/app/database/: __init__.py  connection.py  session.py
claims_status/app/database/cruds/: stedi_cruds.py
claims_status/app/docs/: Code_Mapping.csv  Code_Mapping_1.csv  baca.csv  claim-status.csv  eclaims-patients.csv  stedi_payers.csv
claims_status/app/models/: StediPayersModel.py  __init__.py
claims_status/app/services/: __init__.py  bckup.py  claim_service.py  converter_service.py
stedi-excel-processor/: .env  Affect_IV_output.csv  Apex_IV_output.csv  P1_IV_output.csv  README.md  output.xlsx  pyproject.toml  requirements.txt
stedi-excel-processor/src/: config.py  database.py  excel_io.py  main.py  payer_lookup.py  processor.py  stedi_client.py  workers.py
stedi-excel-processor/src/models/: stedi_payers.py
stedi-excel-processor/src/utils/: json_flattener.py
stedi-excel-processor/tests/: test_processor.py  test_stedi_client.py
