[tool.poetry]
name = "stedi-excel-processor"
version = "0.1.0"
description = "A project to process Excel records concurrently and interact with the Stedi API."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.0"
openpyxl = "^3.0.0"
httpx = "^0.19.0"
pydantic = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"